--- a/index.css
+++ b/index.css
@@ -56,3 +56,26 @@ color:#ffc36c ;
     border: 4px solid  #ffc36c;
   }
 }
+
+.completed {
+  position: absolute;
+  z-index: 999;
+  top: 33vh;
+  background-color: RGBA(232, 246, 254, 0.8);
+  width: 100vw;
+  padding: 50px 50px 20px;
+}
+.completed > p {
+  font-size: 1.5em;
+  color: black;
+  text-align: center;
+  margin: 0;
+}
+.completed > p:first-child {
+  font-size: 3em;
+  font-weight: 700;
+  color: #c48080;
+}
+.completed button{
+  margin: 20px 0;
+}
